# Highload

./: .gitignore  README.md
Server_v1/: CMakeLists.txt  TaskItem.cpp  TaskItem.h  TaskItemExecuter.cpp  TaskItemExecuter.h  Worker.cpp  Worker.h  WorkersPool.cpp  WorkersPool.h  main.cpp
Server_v1/Http/: HttpRR.cpp  HttpRR.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
Server_v1/Server/: ServerConfig.cpp  ServerConfig.h  TaskItem.cpp  TaskItem.h  TaskItemExecuter.cpp  TaskItemExecuter.h  Worker.cpp  Worker.h  WorkersPool.cpp  WorkersPool.h
Server_v1/document_root/: index.html  вау нау.html
